IVYPORTAL-10564: Various or urgent requests in IVYPORTAL S193 - Fixed minor bug: scroll height not updated when resize - Fixed minor bug: "Apply filter" button in chart creation page jump down in small screen - Fixed minor bug: misalignment between filter card and chart card - Fixed minor bug: duplicated case name in case information dialog - Fixed minor bug: remove edit task name feature - Fixed minor bug: recover missing buttons of case/task filters in small screen - Fixed minor bug: consolidate header in small screen

--- a/AxonIvyPortal/PortalStyle/webContent/resources/css/portal.css
+++ b/AxonIvyPortal/PortalStyle/webContent/resources/css/portal.css
@@ -1225,13 +1225,6 @@ body .ui-inputfield.case-detail-name-input {
 .action-steps-panel .action-icon {
   font-size: var(--large-font-size); }
 
-
-.widget-title-mobile {
-  border-bottom: solid 1px var(--widget-header-mobile-border-bottom);
-  height: 100%;
-  margin-top: 1px;
-}
-
 /*Process --------------------------------------*/
 .process-widget .process-nav .process-nav-item {
   color: var(--process-navigator-item-color);
